Fix Passing a PGP message via KToolInvocation::invokeMailer() it will not show up in the composer

BUG: 332368
FIXED-IN: 5.19.2